# gde2-session-manager

./: AUTHORS  HACKING  Makefile.am  NEWS  NEWS-MATE  README  autogen.sh  configure.ac
.tx/: config
capplet/: Makefile.am  gsm-app-dialog.c  gsm-properties-dialog.c  gsp-app.c  gsp-keyfile.c  gsp-keyfile.h  main.c
data/: Makefile.am  gde2-session-properties.desktop.in.in  gde2-wm  gde2-wm.desktop.in.in  gde2.desktop.in  org.gde2.session.gschema.xml.in
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
doc/dbus/: Makefile.am  gde2-session.xml.in
doc/man/: Makefile.am  gde2-session-inhibit.xml  gde2-session-properties.1  gde2-session-save.1  gde2-session.1  gde2-wm.1
egg/: Makefile.am  eggdesktopfile.c  eggsmclient-xsmp.c
gde2-session/: Makefile.am  README  gsm-autostart-app.c  gsm-autostart-app.h  gsm-inhibit-dialog.c  gsm-logout-dialog.c  gsm-manager.c  gsm-manager.h  gsm-presence.c  gsm-util.c  gsm-xsmp-client.c  main.c  msm-gnome.c
po/: POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_AR.po  es_CO.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  frp.po  fur.po  (+73 more)
tools/: Makefile.am  gde2-session-save.c
